# KatanaUsdPlugins

./: CMakeLists.txt
cmake/macros/: PxrUsdUtils.cmake  Support.cmake
cmake/modules/: FindUSD.cmake
lib/usdKatana/: CMakeLists.txt  readPointInstancer.cpp  utils.h
lib/vtKatana/: CMakeLists.txt
plugin/: CMakeLists.txt
plugin/pxrUsdIn/: CMakeLists.txt
python/: CMakeLists.txt
python/usdExport/: CMakeLists.txt
python/usdExport/SuperTools/: CMakeLists.txt
